# openglcts-mini

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cts_gles2.cmake  dEQP-GLES2-cases.txt  dEQP-GLES2-cases.xml  main.cpp  vkNullDriver.hpp  vkPlatform.hpp
tools/: README.md  analyze_exceptions.py  code_check.py  requirements.txt  run_auto_test.py
tools/lib/: __init__.py  device_control.py  serial_utils.py  test_models.py  test_parser.py  test_runner.py  utils.py
